proyect-2/ingress.rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-rules
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 3001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 3000
